--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         node-version: [14.x]
 
     # This job runs only if the commit message says build app
-    if: "contains(github.event.commits[0].message, '[build app]')"
+    if: "contains(github.event.commits[0].message, 'build app')"
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
