--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,37 @@ on:
     branches: [ development ]
   pull_request:
     branches: [ development ]
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+
+  build_test:
+    name: Build & Test App
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x]
+    # This job runs only if the commit message says build app
+    if: "contains(github.event.commits[0].message, 'build app')"
+    # Steps represent a sequence of tasks that will be executed as part of the
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+      - name: setup node
+        uses: actions/setup-node@master
+        with:
+          node-version: ${{ matrix.node-version }}
+      # install application dependencies
+      - name: Install dependencies
+        run: |
+          npm install
+          npm ci
+      # build and test the apps
+      - name: build & test
+        run: |
+          npm run lint
   # This workflow contains multiple jobs
   push_to_DockerHub:
     name: Push Images to DockerHub
@@ -56,4 +81,3 @@ jobs:
             echo "runing the docker image"
             echo "Testing the nodejs  app endpoints"
             echo ${{ steps.docker_build.outputs.digest }}
-
